Fix: Restore flex display for aircraft grid centering after radar animation

--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
             // Hide radar after animation completes
             setTimeout(() => {
                 radarContainer.classList.remove('active');
-                aircraftGrid.style.display = 'block';
+                aircraftGrid.style.display = 'flex'; // Restore flex display for centering
                 refreshBtn.classList.remove('scanning');
                 refreshBtn.textContent = 'REFRESH NOW';
             }, 2500);
